--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Really Hyped - Tech job trends on StackOveflow Careers</title>
+    <title>Really Hyped - Tech job trends on StackOverflow Careers</title>
   </head>
   <body>
     <div id="root"></div>
